short sentence book overview

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,3 +17,10 @@
   font-size: 10px;
   font-family: 'Patrick Hand', cursive;
 }
+#shortsentence {
+overflow: hidden;
+text-overflow: ellipsis;
+display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+}
