--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,12 @@ display: -webkit-box;
 .btn {
   background-color: #b9a6e3;
 }
+
+.authorPhoto {
+  width: 100px;
+  height: 100px;
+  border-width: thin;
+  border-color: black;
+  border-radius: 20px
+
+}
