--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,11 @@ display: -webkit-box;
   border-radius: 20px
 
 }
-
+.authorHeading {
+  font-family: 'Patrick Hand', cursive;
+  font-weight: bold;
+  text-decoration: underline;
+}
 .headings {
   font-size: 20px;
   font-family: 'Patrick Hand', cursive;
